[gd_scene load_steps=20 format=3 uid="uid://uwjd2noo0bpv"]

[ext_resource type="Script" uid="uid://ch5jdm4t2ujk8" path="res://Scenes/Main/parts/OS/Apps/StoreApp/parts/store_component.gd" id="1_wqkf0"]
[ext_resource type="LabelSettings" uid="uid://chq5rx4ad5jlu" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/MetricsContainer/parts/label_medium.tres" id="2_83bqm"]
[ext_resource type="PackedScene" uid="uid://eqyg3c15y82h" path="res://Scenes/Main/parts/Background/Background.tscn" id="2_o6n1o"]
[ext_resource type="FontFile" uid="uid://dlia1t71max12" path="res://Fonts/PixelOperator.ttf" id="3_5qdix"]
[ext_resource type="PackedScene" uid="uid://c7n7pxhkwpt0k" path="res://UI/SvgIcon/SVGIcon.tscn" id="3_83bqm"]
[ext_resource type="PackedScene" uid="uid://diewdd1a4yfp1" path="res://Components/BtnControls/BtnControls.tscn" id="5_dolkk"]
[ext_resource type="PackedScene" uid="uid://c7jvy7pbmduc5" path="res://UI/Buttons/SummaryBtn/SummaryBtn.tscn" id="5_nouqp"]
[ext_resource type="LabelSettings" uid="uid://bnryvwswipkov" path="res://Fonts/font_2_32_white.tres" id="6_fulfa"]
[ext_resource type="PackedScene" uid="uid://4yp3dbhux2i3" path="res://Scenes/Main/parts/OS/Apps/StoreApp/parts/StoreResourceItem.tscn" id="7_dolkk"]
[ext_resource type="PackedScene" uid="uid://boqoftsfla8vk" path="res://Components/CostPanel/CostPanel.tscn" id="7_ek13x"]
[ext_resource type="PackedScene" uid="uid://gh5hfdolakbr" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/HeaderControl/parts/Economy/Economy.tscn" id="7_nouqp"]
[ext_resource type="PackedScene" uid="uid://b6ltnlpexqlq8" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/HeaderControl/parts/Vibes/Vibes.tscn" id="8_1tpkh"]
[ext_resource type="PackedScene" uid="uid://cfmfs2x81vts1" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/HeaderControl/parts/Personnel/Personnel.tscn" id="9_fulfa"]
[ext_resource type="PackedScene" uid="uid://b0j6wdywnl5ws" path="res://Scenes/Main/parts/OS/Apps/StoreApp/parts/StorePersonnelItem.tscn" id="9_nouqp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nouqp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nouqp"]
bg_color = Color(0, 0, 0, 0.917647)

[sub_resource type="LabelSettings" id="LabelSettings_1tpkh"]
font = ExtResource("3_5qdix")
font_size = 32
font_color = Color(1, 0.74902, 0.2, 1)
outline_size = 8
outline_color = Color(0.886275, 0.647059, 0, 0.337255)
shadow_size = 2
shadow_color = Color(1, 0.74902, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dolkk"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 0.760784)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_41o8u"]
color = Color(1, 0.745178, 0.380506, 1)
thickness = 3

[node name="StoreComponent" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_nouqp")
script = ExtResource("1_wqkf0")

[node name="AudioVisualizer" parent="." instance=ExtResource("2_o6n1o")]
layout_mode = 2

[node name="WaitContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="WaitContainer"]
layout_mode = 2
text = "Connecting to server..."
label_settings = ExtResource("2_83bqm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_nouqp")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Left" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_83bqm")]
layout_mode = 2
icon = 27
icon_color = Color(1, 0.745178, 0.380506, 1)
flip_h = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
alignment = 1

[node name="ListLabel" type="Label" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "STORE"
label_settings = SubResource("LabelSettings_1tpkh")
horizontal_alignment = 1

[node name="SVGIcon" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("3_83bqm")]
visible = false
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
icon = 67
icon_color = Color(1, 0.745178, 0.380506, 1)
icon_size = Vector2(30, 30)

[node name="Right" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_83bqm")]
layout_mode = 2
icon = 27
icon_color = Color(1, 0.745178, 0.380506, 1)

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="List" type="VBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SummaryBtn" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/List" instance=ExtResource("5_nouqp")]
layout_mode = 2
icon = 31
hide_icon = true
show_cost = true
fill = true

[node name="StoreContentContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_dolkk")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/StoreContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/StoreContentContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "STORE"
label_settings = ExtResource("6_fulfa")
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 100

[node name="CostPanel" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer" instance=ExtResource("7_ek13x")]
layout_mode = 2
size_flags_horizontal = 8
icon = 71
title = "HACK"
amount = 20
small = true

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_41o8u")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HeaderEconomy" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer" instance=ExtResource("7_nouqp")]
layout_mode = 2
size_flags_horizontal = 3
header = "ECONOMY"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EconomyTally" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer" instance=ExtResource("7_dolkk")]
layout_mode = 2
header = "BONUS"

[node name="IncomeTally" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer" instance=ExtResource("7_dolkk")]
layout_mode = 2
header = "INCOME"

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HeaderPersonnel" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer3" instance=ExtResource("9_fulfa")]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PersonnelTally" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer3/HBoxContainer2" instance=ExtResource("9_nouqp")]
layout_mode = 2
header = "BONUS"

[node name="PersonnelMaxTally" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer3/HBoxContainer2" instance=ExtResource("9_nouqp")]
layout_mode = 2
header = "capacity"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
theme_override_constants/separation = 20

[node name="HeaderVibes" parent="HBoxContainer/StoreContentContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2" instance=ExtResource("8_1tpkh")]
layout_mode = 2
size_flags_horizontal = 3
header = "VIBES"
morale_tag_val = 0

[node name="BtnControl" parent="." instance=ExtResource("5_dolkk")]
layout_mode = 2
offset = Vector2(15, 20)
a_btn_title = "TOGGLE"
b_btn_title = "BACK TO DESKTOP"
